# contabo_storage_manager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.node  Dockerfile.python  README.md  SEQUENCER_MIGRATION.md  check-deployment.sh  docker-compose.yml  git.sh  package-lock.json  package.json  pyproject.toml  restart-vps.sh  setup-services.sh  vps-git-fix.sh
.github/workflows/: deploy.yml
.playwright-mcp/: page-2026-04-14T03-09-06-578Z.yml
config/: nginx-files.conf  nginx-models.conf  nginx.conf.example  storage.noahcohn.com.conf  vsftpd.conf.example
data/files/pachinball/: README.md
data/files/pachinball/backbox/: manifest.json
data/files/pachinball/maps/: maps.json
data/files/pachinball/music/: tracks.json
data/files/pachinball/zones/: manifest.json
scripts/: download_shaders.sh  ftp_sync.py  import_shaders.py  import_shaders_with_params.py  index_mods.py  listFtpFiles.js  poll_api.py  sync_gcs_music.py  sync_mods.py  sync_music_index.py  sync_presets.py  upload_model_to_vps.py
systemd/: contabo-storage-node.service  contabo-storage-python.service  contabo-storage-sync.service  contabo-storage-sync.timer  ftpbridge-node.service  ftpbridge-python.service
tests/: test_api_rating_filters.py  test_cors.py  test_flac_client.py  test_presets_router.py
